--- a/q10/q10/css/style.css
+++ b/q10/q10/css/style.css
@@ -1,1 +1,87 @@
 @charset "UTF-8";
+
+.flexitem{
+  display: flex;
+  justify-content: center;
+}
+
+.btn{
+  /* padding: 15px; */
+  padding: 0 15px;
+  margin: 0 15px;
+  line-height: 50px;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.red-button{
+  color: #fff;
+  background: #fd0f0fd9;
+}
+
+.blue-button{
+  color: #fff;
+  background: #170ffdd9;
+}
+
+.green-button{
+  color: #000;
+  background: #0ffd0fd9;
+}
+
+.red-shadow{
+  box-shadow: 0px 5px 5px 3px rgba(63, 5, 5, 0.851)
+}
+
+.blue-shadow{
+  box-shadow: 0px 5px 5px 3px rgba(5, 13, 63, 0.851)
+}
+
+.green-shadow{
+  box-shadow: 0px 5px 5px 3px rgba(5, 63, 5, 0.851)
+}
+
+.red-shadow:active{
+  transform: translateY(5px);
+  box-shadow: 0px 0px 0px 0px rgba(5, 63, 5, 0.851)
+}
+
+.blue-shadow:active{
+  transform: translateY(5px);
+  box-shadow: 0px 0px 0px 0px rgba(5, 63, 5, 0.851)
+}
+
+.green-shadow:active{
+  transform: translateY(5px);
+  box-shadow: 0px 0px 0px 0px rgba(5, 63, 5, 0.851)
+}
+
+.btn-design1{
+  color: #67c5ff;
+  border: 4px double #67c5ff;
+}
+
+.btn-design1:hover{
+  background: #fffbef;
+}
+
+.btn-design2{
+  color: #67c5ff;
+  border: 4px dotted #67c5ff;
+}
+
+.btn-design2:hover{
+  border: 4px dashed #75caff;
+}
+
+.btn-design3{
+  color: #0079a5f8;
+  background: #d0edfff8;
+  border: 4px dashed #67c5ff;
+}
+
+.btn-design3:hover{
+  color: #67c5ff;
+  background: #ffffff;
+}
