--- a/q6/q6/css/style.css
+++ b/q6/q6/css/style.css
@@ -1,1 +1,41 @@
 @charset "UTF-8";
+
+header{
+  background: #388bff;
+  width: 100%;
+}
+
+a{
+  text-decoration: none;
+}
+
+.header_content{
+  width: 1100px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  /* align-items: center; */
+}
+
+ul{
+  display: flex;
+  justify-content: space-between;
+}
+
+li{
+  padding: 30px;
+}
+
+.navbar a{
+  color: #ffffff;
+}
+
+.logo{
+  padding-top: 30px;
+}
+
+.logo a{
+  font-size: 24px;
+  font-weight: bold;
+  color: #f2ff7b;
+}
