--- a/q7/q7/css/style.css
+++ b/q7/q7/css/style.css
@@ -1,1 +1,31 @@
 @charset "UTF-8";
+
+.text-box{
+  width: 500px;
+  font-size: 16px;
+  line-height: 16px;
+  background: #fad296;
+  border: solid 5px #8f5a0a;
+  padding: 20px;
+  margin: 0 auto;
+  border-radius: 30px;
+  position: relative;
+}
+
+.text-box:before{
+  content: "";
+  position: absolute;
+  border: 20px solid transparent;
+  border-top: 20px solid #8f5a0a;
+  left: 30px;
+  top: 170px;
+}
+
+.text-box:after{
+  content: "";
+  position: absolute;
+  border: 20px solid transparent;
+  border-top: 20px solid #fad296;
+  left: 30px;
+  top: 163px;
+}
